# LanguageLearningTools

./: Home.py  README.md  page_supplementaries.py  pyproject.toml
config/: __init__.py  config.toml  howto_config.toml
free_materials/: files_dict.json
pages/: 1_Shuffled_tables.py  about.py  become_grammar_pro.py  create_own_table.py  master_parts_of_speech.py  practice.py  results.py  watch_and_learn.py
src/: shuffled_table.py
