[tool.poetry]
name = "english-learning-tool"
version = "0.1.0"
description = ""
authors = ["Nikita Shevyrev <n.shevyrev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
streamlit = "^1.23.1"
deep-translator = "^1.11.1"
tomli = "^2.0.1"
st-pages = "^0.4.3"
gforms = "^1.3.1"
streamlit-gsheets = {git = "https://github.com/streamlit/gsheets-connection"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
